--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
             <div class="group">
                 <img src="img/instagram-logo.png" alt="Instagram Logo" class="instagram-logo">
                 <div class="profile-photo">
-                    <img src="img/profile.jfif" alt="foto de perfil do instagram">
+                    <img src="img/profile.JPG" alt="foto de perfil do instagram">
                 </div>
                 <a href="/" class="instagram-login">Continue como aelin.vi</a>
                 <a href="/" class="instagram-logout">Remover conta</a>
             </div>
             <div class="group">
                 <p class="not-account">Não é aelin.vi?</p>
-                <p class="notaccount">
+                <p class="not-account">
                     <span class="link-blue">Aleternar contas</span>
                     ou
                     <span class="link-blue">Sair</span>
